--- a/po/uk_UA/batch.po
+++ b/po/uk_UA/batch.po
@@ -9,10 +9,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-07-20 03:57+0000\n"
-"Last-Translator: Sergiy <shemet.s@ua.fm>\n"
-"Language-Team: Ukrainian (http://www.transifex.com/p/civicrm/language/uk/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,6 +34,10 @@ msgstr "Переглянути/Додати транзакції до пакет
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Повторно відкрити пакет"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -60,12 +64,52 @@ msgid "No export format selected."
 msgstr "Не обрано жодного формату експортування."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Дата експортування"
+msgid "Batch ID"
+msgstr "ID пакету"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Кількість елементів даних"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Опис пакету"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Пакет створено"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Дата створення пакету"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Пакет змінено"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Дата внесення змін до пакету"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Смарт-група пакету"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Загальна кількість пакетів"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Кількість елементів пакетних даних"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Інструмент пакетного платежу"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Дата експортування пакету"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Пакетні дані"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -84,6 +128,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Запис пакетних даних для членств"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Запис пакетних даних для платежів за фінансовим зобов'язанням"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Ігнорувати неспівпадіння та обробити пакет?"
 
@@ -92,16 +140,16 @@ msgid "Validate & Process the Batch"
 msgstr "Перевірити та обробити пакет"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Деякі поля були виключені."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Сума пільгового кредиту не може перевищувати загальну суму"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Тип членства є обов'язковим полем."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Ви не можете записати одразу два платежі для одного фінансового зобов'язання в одному пакеті."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -150,6 +198,10 @@ msgstr "Очікувана загальна сума"
 msgid "Total amount entered"
 msgstr "Введена загальна сума"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Відкриті фінансові зобов'язання (Термін оплати - Сума)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Записи пакетних даних"
@@ -171,65 +223,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Для даного сайту не було створено жодного запису пакетних даних."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID пакету"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Назва пакету"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Опис пакету"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Пакет створено"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Дата створення пакету"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Пакет змінено"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Дата внесення змін до пакету"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Смарт-група пакету"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Загальна кількість пакетів"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Кількість елементів пакетних даних"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Інструмент пакетного платежу"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Дата експортування пакету"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Пакетні дані"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Запис пакетних даних для платежів за фінансовим зобов'язанням"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Ви не можете записати одразу два платежі для одного фінансового зобов'язання в одному пакеті."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Відкриті фінансові зобов'язання (Термін оплати - Сума)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
