--- a/po/tr_TR/grant.po
+++ b/po/tr_TR/grant.po
@@ -4,13 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # ayhan alkaya <alkayaayhan@yandex.com>, 2013
-# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-26 06:35+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:47+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -38,14 +38,6 @@ msgstr "Bağış Gerçekleşme Tarihi NULL"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Bağış Kararı Tarihi NULL"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Bağış Tipi %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Bağış Durumu %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -92,10 +84,6 @@ msgid "Grant report received"
 msgstr "Bağış raporu alındı"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Bağış Tipi Kodu"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Bağışlanan tutar"
 
@@ -107,10 +95,6 @@ msgstr "Bağışın Para Birimi"
 msgid "Grant Rationale"
 msgstr "Bağış Gerekçesi"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Bağış Durumu Kodu"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Bağış Raporu Alındı mı?"
@@ -118,6 +102,10 @@ msgstr "Bağış Raporu Alındı mı?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "İstenen Tutar<br />(özgün para biriminde)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Başvuran"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -128,12 +116,10 @@ msgid "Delete Grants"
 msgstr "Bağışları Silin"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Silinmiş Bağış: %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Toplam Seçilmiş Bağış: %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count bağış silindi."
+msgstr[1] "%count bağış silindi."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -144,30 +130,46 @@ msgid "Update Grants"
 msgstr "Bağışları Güncelleyin"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Güncellenen Bağış: %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Güncellenen Bağış: %1 (Toplam Seçilen: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "CiviGrant erişimi"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Tüm bağışlara bakın"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "bağışları düzenleyin"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Bağış ekleyin ve düzenleyin"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "CiviGrant üzerinden silin"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Bağışları silin"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "bağışlar"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Bağış yapan"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Bağışa Bakın"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Bağışı Düzenleyin"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Bu bağışı silmek istediğinize emin misiniz?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Bağışı Silin"
 
@@ -180,16 +182,8 @@ msgid "Granted"
 msgstr "Bağışlandı"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Bağışları Yazdırın"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Bağışları Verin"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Bağış Ekleyin"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -210,6 +204,14 @@ msgstr "Bağış parasının aktarıldığı tarih."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(özgün para birimi)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Bağış Durumları"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Bağış Tipleri"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -303,61 +305,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Bu sayfada başlangıç tarihinden itibaren %1  tarafından yapılan tüm bağışlar görüntüleniyor."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Bu kişiye bağış kaydetmek için <a accesskey='N' href='%1'>Bağış Ekle</a> düğmesine tıklayın."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Bu kişiye bağış kaydetmek için <a %1>Bağış Ekle</a> düğmesine tıklayın."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Bu kişi adına kaydedilmiş bir bağış yok."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Başvuran"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr "Bağışları Verin"
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Güncellenen Bağış: %1 (Toplam Seçilen: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Bu kişiye bağış kaydetmek için <a %1>Bağış Ekle</a> düğmesine tıklayın."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count bağış silindi."
-msgstr[1] "%count bağış silindi."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "CiviGrant erişimi"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Tüm bağışlara bakın"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "bağışları düzenleyin"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Bağış ekleyin ve düzenleyin"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "CiviGrant üzerinden silin"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Bağışları silin"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Bağış Durumları"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Bağış Tipleri"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr "Bağışları Güncelleyin"
